<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity24Postres">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView35"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="30"
                        app:srcCompat="@drawable/postreheladofresa" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="70"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView60"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="HELADO DE FRESA"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView61"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_weight="2"
                            android:text="@string/PostreHelado" />

                        <Button
                            android:id="@+id/bHeladoFresa"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_weight="1"
                            android:backgroundTint="@color/common_google_signin_btn_text_dark_focused"
                            android:onClick="addCarritoHeladoFresa"
                            android:text="@string/AniadirAlCarrito"
                            android:textColor="@color/colorPrimary" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView36"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="30"
                        app:srcCompat="@drawable/postreflan" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="70"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView58"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="FLAN DE QUESO"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView59"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_weight="2"
                            android:text="@string/PostreFlan" />

                        <Button
                            android:id="@+id/bFlan"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_weight="1"
                            android:backgroundTint="@color/common_google_signin_btn_text_dark_focused"
                            android:onClick="addCarritoFlanQueso"
                            android:text="@string/AniadirAlCarrito"
                            android:textColor="@color/colorPrimary" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView37"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="30"
                        app:srcCompat="@drawable/postretartazanahoria" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="70"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView63"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="TARTA DE ZANAHORIA"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView62"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_weight="2"
                            android:text="@string/PostreTartaZanahoria" />

                        <Button
                            android:id="@+id/bTartaZanahoria"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_weight="1"
                            android:backgroundTint="@color/common_google_signin_btn_text_dark_focused"
                            android:onClick="addCarritoTartaZanahoria"
                            android:text="@string/AniadirAlCarrito"
                            android:textColor="@color/colorPrimary" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView38"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="30"
                        app:srcCompat="@drawable/postresandia" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="70"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView64"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="SANDIA"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView65"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_weight="2"
                            android:text="@string/PostreSandia" />

                        <Button
                            android:id="@+id/bSandia"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_weight="1"
                            android:backgroundTint="@color/common_google_signin_btn_text_dark_focused"
                            android:onClick="addCarritoSandia"
                            android:text="@string/AniadirAlCarrito"
                            android:textColor="@color/colorPrimary" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView39"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="30"
                        app:srcCompat="@drawable/postremousselimon" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="70"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView66"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="MOUSE DE LIMON"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView67"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_weight="2"
                            android:text="@string/PostreMouseLimon" />

                        <Button
                            android:id="@+id/bMouseLimon"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_weight="1"
                            android:backgroundTint="@color/common_google_signin_btn_text_dark_focused"
                            android:onClick="addCarritoMousseLimon"
                            android:text="@string/AniadirAlCarrito"
                            android:textColor="@color/colorPrimary" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/common_google_signin_btn_text_dark_focused"
                        android:onClick="cambioPantallaCarrito"
                        android:text="@string/verCarrito"
                        android:textColor="@color/colorPrimary" />

                    <Button
                        android:id="@+id/button10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/common_google_signin_btn_text_dark_focused"
                        android:onClick="cambioPantallaComida"
                        android:text="@string/ATRAS"
                        android:textColor="@color/colorPrimary" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>