<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity21Menus">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/menuuno" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_weight="1"
                            android:text="@string/MENUuno"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_weight="1"
                            android:text="Pimer plato: Sopa" />

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_weight="1"
                            android:text="Segundo plato: Huevos con patatas" />

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_weight="1"
                            android:text="Postre: Flan o cafe" />

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_weight="1"
                            android:text="Bebida y pan incluidos" />

                        <Button
                            android:id="@+id/bMenu1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:backgroundTint="@color/common_google_signin_btn_text_dark_focused"
                            android:onClick="addCarritoMenu1"
                            android:text="@string/AniadirAlCarrito"
                            android:textColor="@color/colorPrimary" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_weight="1"
                            android:text="@string/MENUdos"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView12"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_weight="1"
                            android:text="Primero: Ensalada de frutas" />

                        <TextView
                            android:id="@+id/textView13"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_weight="1"
                            android:text="Segundo: Trucha" />

                        <TextView
                            android:id="@+id/textView14"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_weight="1"
                            android:text="Postre: Arror con leche" />

                        <TextView
                            android:id="@+id/textView15"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_weight="1"
                            android:text="Pan y bebido incluidos" />

                        <Button
                            android:id="@+id/bMenu2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:backgroundTint="@color/common_google_signin_btn_text_dark_focused"
                            android:onClick="addCarritoMenu2"
                            android:text="@string/AniadirAlCarrito"
                            android:textColor="@color/colorPrimary" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/imageView12"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/menudos" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/imageView13"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/menutres" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView16"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_weight="1"
                            android:text="@string/MENUtres"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView17"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_weight="1"
                            android:text="Primero: Sopa castellana" />

                        <TextView
                            android:id="@+id/textView18"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_weight="1"
                            android:text="Segundo: Secreto iberico" />

                        <TextView
                            android:id="@+id/textView19"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_weight="1"
                            android:text="Postre: Flan de queso" />

                        <TextView
                            android:id="@+id/textView20"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_weight="1"
                            android:text="Pan y bebida incluidos" />

                        <Button
                            android:id="@+id/bMenu3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:backgroundTint="@color/common_google_signin_btn_text_dark_focused"
                            android:onClick="addCarritoMenu3"
                            android:text="@string/AniadirAlCarrito"
                            android:textColor="@color/colorPrimary" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView21"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_weight="1"
                            android:text="@string/MENUcuatro"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView22"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_weight="1"
                            android:text="Primero: Gazpacho" />

                        <TextView
                            android:id="@+id/textView23"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_weight="1"
                            android:text="Segundo: Filete de ternera" />

                        <TextView
                            android:id="@+id/textView25"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_weight="1"
                            android:text="Postre: Mouse de chocolate" />

                        <TextView
                            android:id="@+id/textView26"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_weight="1"
                            android:text="Pan y bebida incluidos" />

                        <Button
                            android:id="@+id/bMenu4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:backgroundTint="@color/common_google_signin_btn_text_dark_focused"
                            android:onClick="addCarritoMenu4"
                            android:text="@string/AniadirAlCarrito"
                            android:textColor="@color/colorPrimary" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/imageView14"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/menucuatro" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="80"
                        android:backgroundTint="@color/common_google_signin_btn_text_dark_focused"
                        android:onClick="cambioPantallaCarrito"
                        android:text="@string/verCarrito"
                        android:textColor="@color/colorPrimary" />

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="20"
                        android:backgroundTint="@color/common_google_signin_btn_text_dark_focused"
                        android:onClick="cambioPantallaComida"
                        android:text="@string/ATRAS"
                        android:textColor="@color/colorPrimary" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>